refactor(ArenaCore): 網羅的リファクタリング + 用語統一 + ベッティングシステム改善
[用語統一]
- 「賭け」→「ベット」をUI/コメント/config全体で統一 (80+箇所)
- フレーバーテキスト削除、デバッグログ除去

[コード品質]
- 未使用import削除 (10件)
- FQCN → import化 (20+箇所)
- 空catchブロック → logger.fine() (4箇所)
- Arrays.asList → List.of統一 (6ファイル)
- Collections.emptyList → List.of統一
- マジックナンバー → 定数化 (VOTE_TIMEOUT, UNANIMITY_THRESHOLD等)
- 冗長ラムダ → メソッド参照
- leaf クラスにfinal付与 (4クラス)

[構造改善]
- BettingManager.calculateAndDistributePayout() 245行 → 7メソッドに分割
- DistributionRates record抽出 (config読み込み3重複解消)
- distributeFighterPool() で敗者/勝者分配を統合
- PlacedChipInfo → record変換 (68行→22行)
- DeathmatchChallenge: VoteTally record + countVotes()抽出
- ArenaManager: getMainScoreboard()ヘルパー (5箇所統一)
- OpenSubCommand: 重複ループ統合
- requireActiveSession結果の直接使用 (4箇所)

[新機能]
- デスマッチ投票 (5人以下全員一致/6人以上過半数)
- ブラインドフェーズ (オッズ非公開期間)
- ジャックポットシステム
- PayoutDistributor (パリミュチュエル天引き分配)

[削除]
- 旧PayoutStrategy系 (FixedOddsPayout, PariMutuelPayout等) をPayoutDistributorに統合