@@ -2,7 +2,6 @@ package io.wax100.arenaCore.command;
 
 import org.bukkit.command.CommandSender;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -29,7 +28,7 @@ public interface SubCommand {
      * @return 補完候補リスト
      */
     default List<String> tabComplete(CommandSender sender, String[] args) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
